<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    android:id="@+id/nestedScrollView"
    tools:context=".registration">

<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.v7.widget.AppCompatImageView
        android:layout_width = "match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40sp"/>

    <android.support.design.widget.TextInputLayout
        android:id = "@+id/textInputLayoutName"
        android:layout_width = "match_parent"
        android:layout_height ="wrap_content"
        android:layout_marginTop = "40sp"
        android:theme="@style/Theme.AppCompat"
        />

        <android.support.design.widget.TextInputEditText
            android:id = "@+id/textInputEditTextName"
            android:layout_width = "match_parent"
            android:layout_height ="wrap_content"
            android:hint = "@string/name_label"
            android:inputType = "text"
            android:maxLines = "1"
        />

    <android.support.design.widget.TextInputLayout
    android:id = "@+id/textInputLayoutEmail"
    android:layout_width = "match_parent"
    android:layout_height ="wrap_content"
    android:layout_marginTop = "40sp"
    />

        <android.support.design.widget.TextInputEditText
            android:id = "@+id/textInputEditTextEmail"
            android:layout_width = "match_parent"
            android:layout_height ="wrap_content"
            android:hint = "@string/email_label"
            android:inputType = "text"
            android:maxLines = "1"
        />

    <android.support.design.widget.TextInputLayout
        android:id = "@+id/textInputLayoutPassword"
        android:layout_width = "match_parent"
        android:layout_height ="wrap_content"
        android:layout_marginTop = "40sp"
        />

        <android.support.design.widget.TextInputEditText
            android:id = "@+id/textInputEditTextPassword"
            android:layout_width = "match_parent"
            android:layout_height ="wrap_content"
            android:hint = "@string/password_label"
            android:inputType = "text"
            android:maxLines = "1"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:background ="@color/button"
        android:text="@string/login"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/linkRegistrationPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:gravity="center"
        android:background ="@color/button"
        android:text="@string/not_member"
        android:textSize="20sp"

        />






    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>